// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Modal
  contentLabel="users.update_user"
  onRequestClose={[MockFunction]}
  size="small"
>
  <form
    autoComplete="off"
    id="user-form"
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        users.update_user
      </h2>
    </header>
    <div
      className="modal-body modal-container"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-user-name"
        >
          name
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          className="hidden"
          name="name-fake"
          type="text"
        />
        <input
          autoFocus={true}
          disabled={false}
          id="create-user-name"
          maxLength={200}
          name="name"
          onChange={[Function]}
          required={true}
          type="text"
          value="John Doe"
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-user-email"
        >
          users.email
        </label>
        <input
          className="hidden"
          name="email-fake"
          type="email"
        />
        <input
          disabled={false}
          id="create-user-email"
          maxLength={100}
          name="email"
          onChange={[Function]}
          type="email"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label>
          my_profile.scm_accounts
        </label>
        <div
          className="spacer-bottom"
        >
          <Button
            className="js-scm-account-add"
            onClick={[Function]}
          >
            add_verb
          </Button>
        </div>
        <p
          className="note"
        >
          user.login_or_email_used_as_scm_account
        </p>
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
      >
        update_verb
      </SubmitButton>
      <ResetButtonLink
        onClick={[Function]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;

exports[`should render correctly 2`] = `
<Modal
  contentLabel="users.create_user"
  onRequestClose={[MockFunction]}
  size="small"
>
  <form
    autoComplete="off"
    id="user-form"
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        users.create_user
      </h2>
    </header>
    <div
      className="modal-body modal-container"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-user-login"
        >
          login
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          className="hidden"
          name="login-fake"
          type="text"
        />
        <input
          autoFocus={true}
          id="create-user-login"
          maxLength={255}
          minLength={3}
          name="login"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
        <p
          className="note"
        >
          users.minimum_x_characters.3
        </p>
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-user-name"
        >
          name
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          className="hidden"
          name="name-fake"
          type="text"
        />
        <input
          autoFocus={false}
          id="create-user-name"
          maxLength={200}
          name="name"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-user-email"
        >
          users.email
        </label>
        <input
          className="hidden"
          name="email-fake"
          type="email"
        />
        <input
          id="create-user-email"
          maxLength={100}
          name="email"
          onChange={[Function]}
          type="email"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-user-password"
        >
          password
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          className="hidden"
          name="password-fake"
          type="password"
        />
        <input
          id="create-user-password"
          maxLength={50}
          name="password"
          onChange={[Function]}
          required={true}
          type="password"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label>
          my_profile.scm_accounts
        </label>
        <div
          className="spacer-bottom"
        >
          <Button
            className="js-scm-account-add"
            onClick={[Function]}
          >
            add_verb
          </Button>
        </div>
        <p
          className="note"
        >
          user.login_or_email_used_as_scm_account
        </p>
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <SubmitButton
        disabled={false}
      >
        create
      </SubmitButton>
      <ResetButtonLink
        onClick={[Function]}
      >
        cancel
      </ResetButtonLink>
    </footer>
  </form>
</Modal>
`;
